# fishing-exam-alert

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
docs/: 20220219_fishing-exams-bavaria_example-reponse.html  conf.py  index.rst
fishing_exam_alert/: check.py  confirmation.py  db.py  main.py  models.py  notifier.py  settings.py  utils.py
tests/: test_fishing_exam_alert.py  test_main.py  test_models.py  test_utils.py  utils.py
