[tool.poetry]
name = "fishing-exam-alert"
version = "0.1.0"
description = ""
authors = ["larsheinen"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
beautifulsoup4 = "^4.10.0"
pandas = "^1.4.1"
gspread = "^5.1.1"
mailersend = "^0.2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.10.1"
black = "^22.1.0"
ipython = "^8.0.1"
jupyterlab = "^3.2.9"
Sphinx = "^4.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
known_first_party = ["app"]
